testsuite/tests/typecheck/should_fail/T7410.stderr

T7410.hs:3:9: error:
    Expecting one more argument to ‘Either Int’
    The first argument of a tuple should have kind ‘*’,
      but ‘Either Int’ has kind ‘* -> *’
    In the type signature: foo :: (Either Int, Int)
